--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-   <meta name="author"             content="Alan G. Labouseur" />
+   <meta name="author"             content="Andrew Lohr" />
    <link rel="stylesheet" href="austinizer.css" type="text/css" media="screen" />
    <title>
       Austinizer - a Browser-based virtual Operating System
