--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
    </title>
 
    <!-- Globals CONSTANTS and _Variables. Must be included first. -->
-   <script type="text/javascript" src="globals.js"></script>	
+   <script type="text/javascript" src="globals.js"></script>
+   
 
    <!-- Host (Hardware Simulation) Routines -->
    <script type="text/javascript" src="scripts/host/control.js"></script>
@@ -36,7 +37,7 @@
 </head>
 
 <body onload="hostInit();">
-
+<audio id="swinger" src="images/swinger.mp3"></audio>	
 <div id="divMain" style="width:100%;">
 
    <div id="divButtonBar" style="margin:4px;">
