--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
    <script type="text/javascript" src="scripts/host/coreMemory.js"></script>
    <script type="text/javascript" src="scripts/os/pcb.js"></script>
    <script type="text/javascript" src="scripts/os/memoryManager.js"></script>
+   <script type="text/javascript" src="scripts/os/cpuScheduler.js"></script>
    
    <!-- Other Routines -->
    <script type="text/javascript" src="scripts/utils.js"></script>
-   <!-- <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
-	-->
-</head>
+   <script type="text/javascript" src="http://www.labouseur.com/courses/os/projects/glados.js"></script>
+	
 
 <body onload="hostInit();">
 <audio id="swinger" src="images/swinger.mp3"></audio>	
